namespace CogniVault.Application.Interfaces;

public interface IUsernameValidator
{
    bool Validate(string username);
}